--- a/.env
+++ b/.env
@@ -19,7 +19,9 @@ APP_SECRET=a70adf0a1929a144687752f0c7bf13d4
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:1025
+MAILER_SENDER_EMAIL=yvestalentsh@gmail.com
+MAILER_SENDER_NAME="Talents Handicap"
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,6 +29,11 @@ APP_SECRET=a70adf0a1929a144687752f0c7bf13d4
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/talentsh"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+#MAILER_DSN=gmail://yvestalentsh@gmail.com:Bubanza1983@default
+###< symfony/google-mailer ###
