--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,15 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    app.sender_email: '%env(MAILER_SENDER_EMAIL)%'
+    app.sender_name: '%env(MAILER_SENDER_NAME)%'
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            string $uploadsDirectory: '%kernel.project_dir%/public/uploads/'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -23,3 +26,18 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Symfony\Bridge\Doctrine\Security\RememberMe\DoctrineTokenProvider: ~
+
+    App\Services\Mailer:
+        arguments:
+            $senderEmail: '%app.sender_email%'
+            $senderName: '%app.sender_name%'
+
+    App\Services\FileUploader:
+        arguments:
+            $targetDirectory: '%logo_directory%'
+
+    App\Services\HCaptcha:
+        arguments:
+            $hCaptchaSecretKey: '%app.hcaptcha_secret_key%'
