--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -61,4 +61,4 @@ security:
         ROLE_RECRUTEUR: ROLE_CANDIDAT
         ROLE_SUPER_RECRUTEUR: ROLE_RECRUTEUR
         ROLE_COMMUNICANT: ROLE_SUPER_RECRUTEUR
-        ROLE_SUPER_ADMIN_HANDICV: ROLE_COMMUNICANT
+        ROLE_SUPER_ADMIN: ROLE_COMMUNICANT
