--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "@popperjs/core": "^2.10.2",
         "autoprefixer": "^10.3.7",
         "bootstrap": "^5.0.0-beta3",
+        "datatables.net": "^1.11.3",
+        "datatables.net-bs4": "^1.11.3",
+        "datatables.net-dt": "^1.11.3",
         "postcss-loader": "^6.1.1"
     }
 }
