--- a/config/packages/knp_paginator.yaml
+++ b/config/packages/knp_paginator.yaml
@@ -8,7 +8,7 @@ knp_paginator:
     filter_field_name: filterField  # filter field query parameter name
     filter_value_name: filterValue  # filter value query parameter name
   template:
-    pagination: '@KnpPaginator/pagination/twitter_bootstrap_v4_pagination.html.twig'     # sliding pagination controls template
+    pagination: 'pagination/twitter_bootstrap_v5_pagination.html.twig'     # sliding pagination controls template
     sortable: '@KnpPaginator/pagination/bootstrap_v4_sortable_link.html.twig' # sort link template
     filtration: '@KnpPaginator/pagination/filtration.html.twig'  # filters template
 
