--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
-        "@popperjs/core": "^2.10.2",
         "autoprefixer": "^10.3.7",
         "bootstrap": "^5.0.0-beta3",
         "datatables.net": "^1.11.3",
         "datatables.net-bs4": "^1.11.3",
         "datatables.net-dt": "^1.11.3",
         "flip-toolkit": "^7.0.13",
+        "line-awesome": "^1.3.0",
         "postcss-loader": "^6.1.1",
         "wowjs": "^1.1.3"
     }
