--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     app.sender_email: '%env(MAILER_SENDER_EMAIL)%'
     app.sender_name: '%env(MAILER_SENDER_NAME)%'
     files_directory: '%kernel.project_dir%/public/uploads'
+    mercure_secret_key: '%env(MERCURE_SECRET_KEY)%'
 
 services:
     # default configuration for services in *this* file
