--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "friendsofsymfony/ckeditor-bundle": "^2.3",
         "knplabs/knp-paginator-bundle": "^5.7",
         "knpuniversity/oauth2-client-bundle": "^2.8",
+        "lcobucci/jwt": "^4.1",
         "league/oauth2-google": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.2",
         "scheb/2fa-google-authenticator": "^5.12",
@@ -32,6 +33,7 @@
         "symfony/intl": "5.3.*",
         "symfony/mailer": "5.3.*",
         "symfony/mercure": "^0.6.0",
+        "symfony/mercure-bundle": "^0.3.3",
         "symfony/mime": "5.3.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/notifier": "5.3.*",
