--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@babel/preset-react": "^7.16.0",
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/ux-dropzone": "file:vendor/symfony/ux-dropzone/Resources/assets",
         "@symfony/webpack-encore": "^1.0.0",
@@ -29,6 +30,13 @@
         "flip-toolkit": "^7.0.13",
         "line-awesome": "^1.3.0",
         "postcss-loader": "^6.1.1",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.1.2",
+        "redux-thunk": "^2.4.1",
         "wowjs": "^1.1.3"
     }
 }
