--- a/.env
+++ b/.env
@@ -48,3 +48,6 @@ MERCURE_PUBLIC_URL=https://th.localhost/.well-known/mercure
 MERCURE_JWT_SECRET=!ChangeMe!
 MERCURE_SECRET_KEY=!ChangeMe!
 ###< symfony/mercure-bundle ###
+
+GOOGLE_CLIENT_ID="13696784941-j30943p1c3m6mnr5lf67duelr21l51h5.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
