--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
         "@symfony/webpack-encore": "^1.0.0",
         "core-js": "^3.0.0",
         "jquery": "^3.6.0",
+        "node-sass": "^4.14.1",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.42.1",
-        "sass-loader": "^12.0.0",
+        "sass-loader": "^12.4.0",
         "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -22,14 +23,14 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
-        "autoprefixer": "^10.3.7",
+        "autoprefixer": "^10.4.0",
         "bootstrap": "^5.0.0-beta3",
         "datatables.net": "^1.11.3",
         "datatables.net-bs4": "^1.11.3",
         "datatables.net-dt": "^1.11.3",
         "flip-toolkit": "^7.0.13",
         "line-awesome": "^1.3.0",
-        "postcss-loader": "^6.1.1",
+        "postcss-loader": "^6.2.1",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
